--- a/about.html
+++ b/about.html
@@ -229,12 +229,14 @@ $(document).ready(function () {
 </div>
 
 
-<div id="current-work" class="section level2">
-<h2>Current work</h2>
-<p>I am a PhD student (2015 - 2018) in Biochemistry in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I am working on Microbiology and development of antimicrobial compounds<br />
-My advisor is Mr. Eric Faudry (BIG/BCI/PBRC). Contact: <a href="mailto:eric.faudry@cea.fr">eric.faudry@cea.fr</a><br />
-My PhD work funded by the associations: “Vaincre le mucovicidose” and “Gregory Lemarchal”<br />
-My thesis defense will be held on February 6, 2019</p>
+<div id="current-work" class="section level3">
+<h3><strong>Current work</strong></h3>
+<p>I am a PhD student (2015 - 2018) in Biochemistry in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I am working on Microbiology and development of antimicrobial compounds</p>
+<p>My advisor is Mr. Eric Faudry (BIG/BCI/PBRC). Contact: <a href="mailto:eric.faudry@cea.fr">eric.faudry@cea.fr</a></p>
+<p>My PhD work funded by the associations: “Vaincre le mucovicidose” and “Gregory Lemarchal”</p>
+<p>My PhD defense will be held on February 6, 2019</p>
+<p><a href="#www.google.com">Thislink</a></p>
+<p><a href="google.com">linked pharse</a></p>
 </div>
 
 
