--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>My name is Tuan-Dung Ngo, I’m PhD in Biochemistry. <a href="about.html">Know more about me</a></p>
+<p>My name is Tuan-Dung Ngo, I’m PhD in Microbiology. <a href="about.html">Know more about me</a></p>
 <div class="figure">
 <img src="anhjun.png" alt="A view of Grenoble from Bastille fortress." />
 <p class="caption">A view of Grenoble from Bastille fortress.</p>
