--- a/about.html
+++ b/about.html
@@ -236,21 +236,21 @@ $(document).ready(function () {
 <p class="caption">.</p>
 </div>
 <p>Hello, I’m from <a href="https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i">Hanoi</a>, Vietnam. I am currently in <a href="https://fr.wikipedia.org/wiki/Grenoble">Grenoble</a>, France.</p>
-<p>My interest is in the Biomedical Sciences.</p>
-<p>I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. Visit our website here : <a href="https://dongcuongdc.com">wwww.dongcuongdc.com</a></p>
-<div id="current-work" class="section level3">
-<h3><strong>Current work</strong></h3>
-<p>I am a PhD student (2015 - 2018) in Biochemistry and Microbiology in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I am working on virulence factors of pathogen and development of antimicrobial compounds.</p>
+<p>My interest is in the Biomedical and Data Sciences.</p>
+<p>I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome all the Domestic and Foreign Investment.  “To go further, we are together”  Visit our website here : <a href="https://dongcuongdc.com">www.dongcuongdc.com</a></p>
+<div id="previous-work" class="section level3">
+<h3><strong>Previous work</strong></h3>
+<p>PhD student (Dec 2015 - Feb 2019) in Biochemistry and Microbiology in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I am working on virulence factors of pathogen and development of antimicrobial compounds.</p>
 <p>My advisor is Mr. Eric Faudry (BIG/BCI/PBRC). Contact: <a href="mailto:eric.faudry@cea.fr">eric.faudry@cea.fr</a></p>
 <p>My PhD work is funded by the associations: “Vaincre la mucovicidose” and “Gregory Lemarchal”</p>
-<p>My PhD defense will be held on February 6, 2019</p>
+<p>My PhD defense was held on February 6, 2019</p>
 </div>
 <div id="education" class="section level3">
 <h3><strong>Education</strong></h3>
 <p>In 2009, I obtained my High School Graduation Certificate at Nguyen binh Khiem High school, Hanoi, vietnam</p>
 <p>Then, I was in prepratory class at University of Communications and Transport, Hanoi, Vietnam.</p>
 <p>I came in France in 2010 and graduated from <a href="https://www.insa-lyon.fr/">Insa-Lyon</a>, an engineer school in applied sciences, in 2015. I have an engineer diploma in Biochemistry and Biotechnology.</p>
-<p>Currently, I’m PhD student at <a href="https://edcsv.univ-grenoble-alpes.fr/">Doctoral school of Chemistry and Life Sciences of Grenoble</a>.</p>
+<p>Recently, I’m PhD student at <a href="https://edcsv.univ-grenoble-alpes.fr/">Doctoral school of Chemistry and Life Sciences of Grenoble, France</a> where I got my PhD diploma in Microbiology.</p>
 </div>
 
 
