--- a/cv.html
+++ b/cv.html
@@ -232,10 +232,27 @@ $(document).ready(function () {
 </div>
 
 
-<p><a href="CV.pdf#" class="download" title="Download CV as PDF">Download CV</a></p>
-<div id="header" class="section level2">
-<h2>Header</h2>
-<p>Say more about your CV here.</p>
+<p><a href="CV TDNgo English.pdf#" class="download" title="Download CV as PDF">Download CV</a></p>
+<div id="papers" class="section level3">
+<h3><strong>Papers</strong></h3>
+<p><strong>Tuan-Dung Ngo.,</strong> Sophie Plé., Aline Thomas., Caroline Barette., Antoine Fortuné., Younes Bouzidi., Marie-Odile Fauvarque., Rossimiriam Pereira de Freitas., Flaviane Francisco Hilário., Ina Attrée., Yung-Sing Wong., and Eric Faudry. (2019). <strong>“Chimeric protein-protein interface inhibitors allow efficient inhibition of Type III secretion machinery and Pseudomonas aeruginosa virulence”</strong>. J.Am.Chem.Soc. IF 14.3 (Submitted in March 2019)</p>
+</div>
+<div id="talks" class="section level3">
+<h3><strong>Talks</strong></h3>
+<p><strong>November 2018</strong><br/> Oral scientific communication in the conference of SFM (Société Française Microbiologie), in Paris, France.</p>
+<p><strong>December 2017</strong><br/> Oral scientific communication in the conference of G-RREMI (groupe Régional de Recherche en Microbiologie des Interactions), in Lyon, France.</p>
+<p><strong>February 2017</strong><br/> Oral scientific communication in the « European Young Investigators Meeting 2017 on Cystic Fibrosis », in Paris, France.</p>
+</div>
+<div id="other-conferences" class="section level3">
+<h3><strong>Other conferences</strong></h3>
+<ul>
+<li>2018: 19th conference of VLM (Vaincre la Mucoviscidose), in Paris, France</li>
+<li>2017: 2nd conference of Bacto-Gre, in Grenoble, France</li>
+<li>2017: 18th conference of VLM (Vaincre la Mucoviscidose), in Paris, France</li>
+<li>2016: 1st conference of Bacto-Gre, in Grenoble, France</li>
+<li>2016: Type III Secretion System Meeting, in Tübingen, Germany.</li>
+<li>2016: 17th conference of VLM (Vaincre la Mucoviscidose), in Paris, France</li>
+</ul>
 </div>
 
 
