--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@ $(document).ready(function () {
 </div>
 <p>Hello, I’m from <a href="https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i">Hanoi</a>, Vietnam. I am currently in <a href="https://fr.wikipedia.org/wiki/Grenoble">Grenoble</a>, France.</p>
 <p>My interest is in the Biomedical and Data Sciences.</p>
-<p>I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome Domestic and Foreign Investment.  To open up an opportunity of partnership, feel free to visit our website here : <a href="https://dongcuongdc.com">www.dongcuongdc.com</a>  “To go further, we go together” </p>
+<p>I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome Domestic and Foreign Investment.<br/> To open up an opportunity of partnership, feel free to visit our website here : <a href="https://dongcuongdc.com">www.dongcuongdc.com</a>. “To go further, we go together”</p>
 <div id="previous-work" class="section level3">
 <h3><strong>Previous work</strong></h3>
 <p>PhD student (Dec 2015 - Feb 2019) in Biochemistry and Microbiology in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I am working on virulence factors of pathogen and development of antimicrobial compounds.</p>
