Chinh lai im dam Previous work and education

--- a/about.html
+++ b/about.html
@@ -333,16 +333,20 @@ $(document).ready(function () {
 <p>Hello, I’m from <a href="https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i">Hanoi</a>, Vietnam. I am currently in <a href="https://fr.wikipedia.org/wiki/Grenoble">Grenoble</a>, France.</p>
 <p>My interest is in the Biomedical and Data Sciences.</p>
 <p>Now, I am postdoc researcher in CBO and GBMS teams, <a href="https://www.cermav.cnrs.fr/">CERMAV</a> laboratory (UPR 5301), CNRS, Grenoble, France, on a collaborative research project with SYNTHELIS and SANOFIS PASTEUR.</p>
-<p>###<strong>Previous work</strong></p>
+<div id="previous-work" class="section level3">
+<h3><strong>Previous work</strong></h3>
 <p>PhD student (Dec 2015 - Feb 2019) in Biochemistry and Microbiology in PBRC team (ERL5261), <a href="http://www.bci-lab.fr/">BCI</a> laboratory (UMR1036), BIG, CEA, Grenoble, France. I worked on virulence factors of pathogen and development of antimicrobial compounds.</p>
 <p>My advisor is Mr. Eric Faudry (BIG/BCI/PBRC). Contact: <a href="mailto:eric.faudry@cea.fr" class="email">eric.faudry@cea.fr</a></p>
 <p>My PhD work is funded by the associations: “Vaincre la mucovicidose” and “Gregory Lemarchal”</p>
 <p>My PhD defense was held on February 6, 2019</p>
-<p>###<strong>Education</strong></p>
+</div>
+<div id="education" class="section level3">
+<h3><strong>Education</strong></h3>
 <p>In 2009, I obtained my High School Graduation Certificate at Nguyen binh Khiem High school, Hanoi, vietnam</p>
 <p>Then, I was in prepratory class at University of Communications and Transport, Hanoi, Vietnam.</p>
 <p>I came in France in 2010 and graduated from <a href="https://www.insa-lyon.fr/">Insa-Lyon</a>, an engineer school in applied sciences, in 2015. I have an engineer diploma in Biochemistry and Biotechnology.</p>
 <p>Recently, I’m PhD student at <a href="https://edcsv.univ-grenoble-alpes.fr/">Doctoral school of Chemistry and Life Sciences of Grenoble</a> in France where I got my PhD diploma in Microbiology.</p>
+</div>
 
 
 
